--- a/RelayBoard/PC/list.html
+++ b/RelayBoard/PC/list.html
@@ -151,8 +151,8 @@
 					</div>
 					<div class="paging">
 						<span>
-							<a><img src="img/btn01_first.gif" /></a>
-							<a><img src="img/btn01_prev.gif" /></a>
+							<a><img src="../img/btn01_first.gif" /></a>
+							<a><img src="../img/btn01_prev.gif" /></a>
 							<a class="now" href="#">1</a>
 							<a href="#">2</a>
 							<a href="#">3</a>
@@ -163,8 +163,8 @@
 							<a href="#">8</a>
 							<a href="#">9</a>
 							<a href="#">10</a>
-							<a><img src="img/btn01_next.gif" /></a>
-							<a><img src="img/btn01_last.gif" /></a>
+							<a><img src="../img/btn01_next.gif" /></a>
+							<a><img src="../img/btn01_last.gif" /></a>
 						</span>
 					</div>
 				</div>
