--- a/RelayBoard/PC/article.html
+++ b/RelayBoard/PC/article.html
@@ -4,132 +4,154 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
 		<title>태광그룹 행동약속 캠페인</title>
 	</head>
 	<body>
 		<div class="wrap">
-			<div class="header">
-				<span class="user">홍길동</span>
-				<span class="status">로그아웃</span>
-			</div>
-			<div class="wrap-tit">
-				<div class="tit">태광그룹 행동약속 캠페인</div>
-				<div class="subtit">여러분의 약속을 응원합니다!</div>
-			</div>
-			<div class="wrap-article">
-				<div class="tit-article">나의 행동 양식</div>
-				<div class="txt-article">저는 월1회 협력사 관계자들과 미팅을 하겠습니다.</div>
-				<span class="like">15</span>
-				<button>수정</button>
-				<div class="wrap-info">
-					<div class="writer">
-						<div class="team">정도경영위원회팀</div>
-						<div class="name">홍길동</div>
-					</div>
-					<span class="date">2021-06-30</span>
-					<span class="num-reply">10</span>
+			<div class="wrap-header">
+				<div class="header">
+					<span class="user">홍길동</span>
+					<span class="status">로그아웃</span>
 				</div>
 			</div>
-			<div class="write-reply">
-				<textarea placeholder="댓글작성"></textarea>
-				<button>댓글등록</button>
-			</div>
-			<div class="list-reply">
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
+			<div class="wrap-content">
+				<div class="wrap-tit">
+					<div class="tit">태광그룹 행동약속 캠페인</div>
+					<div class="subtit">여러분의 약속을 응원합니다!</div>
+				</div>
+				<div class="wrap-article">
+					<div class="tit-article">나의 행동 양식</div>
+					<div class="txt-article">
+						<div class="txt-start"><img src="../img/ic-start.svg" /></div>
+						<p>
+							저는 월1회 협력사 관계자들과 미팅을 하겠습니다.저는 월1회 협력사 관계자들과 미팅을 하겠습니다.저는 월1회 협력사 관계자들과 미팅을 하겠습니다.저는 월1회 협력사 관계자들과 미팅을
+							하겠습니다.저는 월1회 협력사 관계자들과 미팅을 하겠습니다.저는 월1회 협력사 관계자들과 미팅을 하겠습니다.
+						</p>
+						<div class="txt-end"><img src="../img/ic-end.svg" /></div>
+						<div class="etc-article">
+							<div class="etc-left">
+								<span class="like">15</span>
+								<span class="num-reply">10</span>
+							</div>
+							<button>수정</button>
+						</div>
 					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
-				</div>
-				<!-- //댓글기본 -->
-				<!-- 댓글수정 -->
-				<div class="reply-edit">
-					<textarea>하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</textarea>
-					<button>수정완료</button>
-				</div>
-				<!-- //댓글수정 -->
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
+
+					<div class="wrap-info">
+						<div class="writer">
+							<div class="team">정도경영위원회팀</div>
+							<div class="name">홍길동</div>
+						</div>
+						<span class="date">2021-06-30</span>
 					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
 				</div>
-				<!-- //댓글기본 -->
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
+				<div class="wrap-reply">
+					<div class="write-reply">
+						<textarea placeholder="댓글작성"></textarea>
+						<button>댓글 등록</button>
 					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
-				</div>
-				<!-- //댓글기본 -->
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
+
+					<div class="list-reply">
+						<!-- 댓글기본-작성자 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<span class="btns">수정 | 삭제</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">
+								하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기
+								실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.
+							</div>
+							<div class="like on">45</div>
+						</div>
+						<!-- //댓글기본 -->
+						<!-- 댓글수정 -->
+						<div class="reply">
+							<div class="reply-edit">
+								<textarea>하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</textarea>
+								<button>수정 완료</button>
+							</div>
+						</div>
+						<!-- //댓글수정 -->
+						<!-- 댓글기본 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
+							<div class="like">45</div>
+						</div>
+						<!-- //댓글기본 -->
+						<!-- 댓글기본 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
+							<div class="like">45</div>
+						</div>
+						<!-- //댓글기본 -->
+						<!-- 댓글기본 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
+							<div class="like">45</div>
+						</div>
+						<!-- //댓글기본 -->
+						<!-- 댓글기본 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
+							<div class="like">45</div>
+						</div>
+						<!-- //댓글기본 -->
+						<!-- 댓글기본 -->
+						<div class="reply">
+							<span class="date">2021-06-30</span>
+							<div class="reply-writer">
+								<span class="name">김사원</span>
+								<span class="team">정도경영위원회팀</span>
+							</div>
+							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
+							<div class="like">45</div>
+						</div>
+						<!-- //댓글기본 -->
 					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
 				</div>
-				<!-- //댓글기본 -->
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
-					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
-				</div>
-				<!-- //댓글기본 -->
-				<!-- 댓글기본 -->
-				<div class="reply">
-					<span class="date">2021-06-30</span>
-					<span class="btns">수정 | 삭제</span>
-					<div class="reply-writer">
-						<span class="name">김사원</span>
-						<span class="team">정도경영위원회팀</span>
-					</div>
-					<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-					<div class="like">45</div>
-				</div>
-				<!-- //댓글기본 -->
 			</div>
 		</div>
 		<!-- 글수정모달 -->
-		<div class="wrap-write" style="display: none">
-			<div class="pop-header">
-				<span>글쓰기</span>
-				<span>닫기</span>
-			</div>
-			<div class="pop-content">
-				<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다.<br />조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
-				<form>
-					<input type="text" value="정도경영위원회팀" />
-					<textarea placeholder="나의 행동양식 내용 입력">저는 월1회 협력사 관계자들과 미팅을 하겠습니다.</textarea>
-					<button>작성 완료</button>
-				</form>
+		<div class="wrap_layerpop" style="display: none">
+			<div class="wrap-write">
+				<div class="pop-header">
+					<span>글쓰기</span>
+					<span class="pop-close"><img src="../img/ic_close.svg" alt="닫기" /></span>
+				</div>
+				<div class="pop-content">
+					<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다.<br />조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
+					<form>
+						<input type="text" value="정도경영위원회팀" />
+						<textarea>저는 월1회 협력사 관계자들과 미팅을 하겠습니다.</textarea>
+						<button>작성 완료</button>
+					</form>
+				</div>
 			</div>
 		</div>
-		<!-- //글쓰기모달 -->
+		<!-- //글수정모달 -->
 	</body>
 </html>
