--- a/RelayBoard/PC/list.html
+++ b/RelayBoard/PC/list.html
@@ -171,18 +171,20 @@
 			</div>
 		</div>
 		<!-- 글쓰기모달 -->
-		<div class="wrap-write" style="display: none">
-			<div class="pop-header">
-				<span>글쓰기</span>
-				<span>닫기</span>
-			</div>
-			<div class="pop-content">
-				<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다.<br />조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
-				<form>
-					<input type="text" placeholder="팀명 입력" />
-					<textarea placeholder="나의 행동양식 내용 입력"></textarea>
-					<button>작성 완료</button>
-				</form>
+		<div class="wrap_layerpop" style="display: none">
+			<div class="wrap-write">
+				<div class="pop-header">
+					<span>글쓰기</span>
+					<span class="pop-close"><img src="../img/ic_close.svg" alt="닫기" /></span>
+				</div>
+				<div class="pop-content">
+					<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다.<br />조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
+					<form>
+						<input type="text" placeholder="팀명 입력" />
+						<textarea placeholder="나의 행동양식 내용 입력"></textarea>
+						<button>작성 완료</button>
+					</form>
+				</div>
 			</div>
 		</div>
 		<!-- //글쓰기모달 -->
