랜딩이미지적용

--- a/RelayBoard/PC/index.html
+++ b/RelayBoard/PC/index.html
@@ -9,10 +9,9 @@
 	</head>
 	<body>
 		<div class="wrap">
-			<div class="wrap-tit">
-				<div class="tit">태광그룹 행동약속 캠페인</div>
-				<div class="subtit">여러분의 약속을 응원합니다!</div>
-				<button class="normal" id="open">로그인</button>
+			<div class="poster"><img src="../img/poster.png" alt="자기 할 일 제대로하는 정도경영" /></div>
+			<div class="wrap-btn">
+				<button class="normal" id="open">행동 약속 릴레이 참여하기</button>
 			</div>
 		</div>
 		<!-- 로그인모달 -->
