--- a/RelayBoard/MOBILE/article.html
+++ b/RelayBoard/MOBILE/article.html
@@ -156,7 +156,7 @@
 					<span class="pop-close close"><img src="../img/ic_close.svg" alt="닫기" /></span>
 				</div>
 				<div class="pop-content">
-					<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다.<br />조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
+					<p>게시글은 조직 내 팀장 등 관리자 이상 작성 가능합니다. 조직의 구성원들께서는 본인 소속팀 게시글의 댓글로 참여 부탁드립니다.</p>
 					<form>
 						<input type="text" value="정도경영위원회팀" />
 						<textarea>저는 월1회 협력사 관계자들과 미팅을 하겠습니다.</textarea>
