pc-게시글없음 추가, 목록보기 버튼 추가, 좋아요영역 수정, 인덱스 버튼 수정

--- a/RelayBoard/PC/article.html
+++ b/RelayBoard/PC/article.html
@@ -46,6 +46,7 @@
 						<span class="date">2021-06-30</span>
 					</div>
 				</div>
+				<div class="btn-list"><button>목록보기</button></div>
 				<div class="wrap-reply">
 					<div class="write-reply">
 						<textarea placeholder="댓글작성"></textarea>
@@ -65,7 +66,7 @@
 								하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기
 								실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.
 							</div>
-							<div class="like on">45</div>
+							<div><span class="like on">15</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글수정 -->
@@ -84,7 +85,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -95,7 +96,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -106,7 +107,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -117,7 +118,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -128,7 +129,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 					</div>
