--- a/RelayBoard/PC/list.html
+++ b/RelayBoard/PC/list.html
@@ -149,6 +149,11 @@
 							</div>
 						</div>
 					</div>
+					<!-- 게시글없음 -->
+					<div class="list nothing" style="display: none">
+						<p>작성된 게시글이 없습니다.</p>
+					</div>
+					<!-- //게시글없음 -->
 					<div class="paging">
 						<span>
 							<a><img src="../img/btn01_first.gif" /></a>
