--- a/RelayBoard/MOBILE/article.html
+++ b/RelayBoard/MOBILE/article.html
@@ -38,6 +38,7 @@
 							<button class="open">수정</button>
 						</div>
 					</div>
+					<div class="btn-list"><button>목록보기</button></div>
 				</div>
 				<div class="wrap-reply">
 					<div class="write-reply">
@@ -58,7 +59,7 @@
 								하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기
 								실천하겠습니다.하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.
 							</div>
-							<div class="like on">45</div>
+							<div><span class="like on">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글수정 -->
@@ -77,7 +78,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -88,7 +89,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -99,7 +100,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -110,7 +111,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 						<!-- 댓글기본 -->
@@ -121,7 +122,7 @@
 								<span class="team">정도경영위원회팀</span>
 							</div>
 							<div class="txt-reply">하반기에는 30분 일찍 출근해서 온라인 교육 듣기 실천하겠습니다.</div>
-							<div class="like">45</div>
+							<div><span class="like">45</span></div>
 						</div>
 						<!-- //댓글기본 -->
 					</div>
