--- a/RelayBoard/PC/index.html
+++ b/RelayBoard/PC/index.html
@@ -8,11 +8,17 @@
 		<title>태광그룹 행동약속 캠페인</title>
 	</head>
 	<body>
-		<div class="wrap">
-			<div class="poster"><img src="../img/poster.png" alt="자기 할 일 제대로하는 정도경영" /></div>
-			<!-- <div class="wrap-btn">
-				<button class="normal" id="open">행동약속 릴레이 참여하기</button>
-			</div> -->
+		<div class="wrap-index">
+			<div class="poster-header">
+				<img src="../img/poster-header.png" />
+			</div>
+			<div class="poster-body">
+				<button id="open"><img src="../img/btn-index.png" alt="행동약속 릴레이 참여하기" /></button>
+				<img src="../img/poster-body.png" />
+			</div>
+			<div class="wrap-footer">
+				<p>ⓒ TAEKWANG GROUP</p>
+			</div>
 		</div>
 		<!-- 로그인모달 -->
 		<div id="modal" class="wrap-layerpop">
