인덱스 시안 변경

--- a/RelayBoard/MOBILE/index.html
+++ b/RelayBoard/MOBILE/index.html
@@ -9,9 +9,15 @@
 	</head>
 	<body>
 		<div class="wrap">
-			<div class="poster"><img src="../img/poster.png" alt="자기 할 일 제대로하는 정도경영" /></div>
-			<div class="wrap-btn">
-				<button class="open">행동약속 릴레이 참여하기</button>
+			<div class="poster-header">
+				<img src="../img/mo-poster-header.png" />
+			</div>
+			<div class="poster-body">
+				<button class="open"><img src="../img/btn-index.png" alt="행동약속 릴레이 참여하기" /></button>
+				<img src="../img/mo-poster-body.png" />
+			</div>
+			<div class="wrap-footer">
+				<p>ⓒ TAEKWANG GROUP</p>
 			</div>
 		</div>
 		<!-- 로그인모달 -->
@@ -22,7 +28,7 @@
 					<span class="pop-close close"><img src="../img/ic_close.svg" alt="닫기" /></span>
 				</div>
 				<div class="pop-content">
-					<p>원활한 서비스 이용을 위해 로그인이 필요합니다.<br />(통합인사정보시스템 계정 사용)</p>
+					<p>원활한 서비스 이용을 위해 로그인이 필요합니다.(통합인사정보시스템 계정 사용)</p>
 					<form>
 						<select>
 							<option>계열사 선택</option>
