--- a/RelayBoard/PC/list.html
+++ b/RelayBoard/PC/list.html
@@ -186,7 +186,7 @@
 					<p>게시글은 팀장 등 조직 내 관리자분들이 작성 가능합니다.<br />팀원분들께서는 본인 소속팀 게시글의 댓글로 참여 바랍니다.</p>
 					<form>
 						<input type="text" placeholder="팀명 입력" />
-						<textarea placeholder="나의 행동양식 내용 입력"></textarea>
+						<textarea placeholder="나의 행동약속 작성"></textarea>
 						<button>작성 완료</button>
 					</form>
 				</div>
