--- a/MOBILE/sub_05_01.html
+++ b/MOBILE/sub_05_01.html
@@ -130,9 +130,11 @@
 
                 <div class="board_header">
                     <div class="g_srch">
-                        <input type="search" id="search" data-type="">
-                        <span id="sort"><a href="#" id="eo1999" class="sort_new" data-togle="0">최신순</a><a href="#"
-                                id="eo2000" class="sort_view" data-togle="0">조회순</a></span>
+                        <input type="search" id="search" data-type="" />
+                        <span id="sort">
+                            <a href="#" id="eo1999" class="sort_new" data-togle="0">최신순</a>
+                            <a href="#" id="eo2000" class="sort_view" data-togle="0">조회순</a>
+                        </span>
                     </div>
                     <input id="stype" class="hidden" value=""></input>
                     <input id="stype2" class="hidden" value=""></input>
