캠페인 배너 추가

--- a/MOBILE/sub_05_01.html
+++ b/MOBILE/sub_05_01.html
@@ -136,6 +136,7 @@
                             <a href="#" id="eo2000" class="sort_view" data-togle="0">조회순</a>
                         </span>
                     </div>
+                    <div class="banner"><img src="img/btn-index.png" alt="행동약속 캠페인 참여하기"></div>
                     <input id="stype" class="hidden" value=""></input>
                     <input id="stype2" class="hidden" value=""></input>
                     <select class="board_select">
