토론 배경 글삽입 영역 추가

--- a/MOBILE/sub_06_02.html
+++ b/MOBILE/sub_06_02.html
@@ -331,6 +331,10 @@
 							<div class="discuss_list_tit">회식이 소통의 활성화와 유대감 증진에 도움이 된다고 생각하십니까?</div>
 							<div class="date_view"><span>2021.02.03 ~ 2021.02.28</span><span>조회 120</span></div>
 						</div>
+						<div class="wrap_article">
+							<p>토론 배경글 영역입니다.</p>
+							<img src="img/test.jpeg" />
+						</div>
 						<div class="wrap_chart">
 							<div id="piechart"></div>
 						</div>
