--- a/PC/menu_06_02.html
+++ b/PC/menu_06_02.html
@@ -574,6 +574,10 @@
 									<div class="discuss_list_date"><span>2020.11.20</span> | 조회 <span>100</span></div>
 								</div>
 								<div class="article_discuss">
+									<div class="wrap_article">
+										<p>토론 배경글 영역입니다.</p>
+										<img src="img/test.jpeg">
+									</div>
 									<div class="wrap_chart">
 										<p class="discuss_ing">토론 진행 중</p>
 										<p class="discuss_list_tit">회식이 소통의 활성화와 유대감 증진에 도움이 된다고 생각하십니까?</p>
