--- a/PC/menu_04_01.html
+++ b/PC/menu_04_01.html
@@ -247,61 +247,61 @@
 										<li>
 											<span class="category">정도경영 사례집</span>
 											<span class="title"><a href="menu_04_03.html">정도경영 온라인 소통창구 '태평소' 접수 및 처리 현황</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">50000</span>
 										</li>
 										<li>
 											<span class="category">정도경영 사례집</span>
 											<span class="title"><a href="menu_04_03.html">정도경영 온라인 소통창구 '태평소' 접수 및 처리 현황</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">50000</span>
 										</li>
 										<li>
 											<span class="category">정도경영 사례집</span>
 											<span class="title"><a href="menu_04_03.html">정도경영 온라인 소통창구 '태평소' 접수 및 처리 현황</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">50000</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">50000</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">50000</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-01-06</span>
 											<span class="view">100</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-09-29</span>
 											<span class="view">50</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-09-29</span>
 											<span class="view">500</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-09-29</span>
 											<span class="view">50</span>
 										</li>
 										<li>
 											<span class="category">위원회 소식</span>
 											<span class="title"><a href="menu_04_03.html">하반기 정도경영 가치 전파 교육 실시</a></span>
-											<span class="date">2020.01.06</span>
+											<span class="date">2020-09-29</span>
 											<span class="view">50</span>
 										</li>
 									</ul>
