현업테스트 반영

--- a/PC/menu_06_02.html
+++ b/PC/menu_06_02.html
@@ -576,11 +576,11 @@
 								<div class="article_discuss">
 									<div class="wrap_article">
 										<p>토론 배경글 영역입니다.</p>
-										<img src="img/test.jpeg">
+										<img src="img/test.jpeg" />
 									</div>
 									<div class="wrap_chart">
 										<p class="discuss_ing">토론 진행 중</p>
-										<p class="discuss_list_tit">회식이 소통의 활성화와 유대감 증진에 도움이 된다고 생각하십니까?</p>
+
 										<div id="piechart" style="width: 800px; height: 500px"></div>
 									</div>
 									<h5>주요 의견</h5>
@@ -651,9 +651,6 @@
 														<option value="T004">티시스</option>
 														<option value="T004">티알엔</option>
 													</select>
-													<!-- 202008추가 -->
-													<span class="txt_s">*사실확인 및 빠른 처리를 위하여 필요한 정보입니다.</span>
-													<!-- end_202008추가 -->
 												</td>
 											</tr>
 											<tr>
@@ -1082,7 +1079,7 @@
 					['도움이 된다', 11],
 					['도움이 안된다', 2],
 				]);
-
+				// 210628옵션적용필요
 				var options = {
 					colors: ['#F2994A', '#bdbdbd'],
 					backgroundColor: '#f4f4f4',
