토론 작성자 정보 추가

--- a/ADMIN/write_discuss.html
+++ b/ADMIN/write_discuss.html
@@ -301,7 +301,6 @@
 									<!-- 의견본문 -->
 									<div class="wrap_opinion">
 										<span class="date">2021-02-10 12:15</span>
-
 										<div class="edit">
 											<select>
 												<option>의견보이기</option>
@@ -309,6 +308,14 @@
 												<option>사용자가 삭제</option>
 											</select>
 										</div>
+										<!-- 작성자정보추가 -->
+										<div class="wrap_info">
+											<span class="name">홍길동</span>
+											<span class="num">28000000</span>
+											<span class="company">태광산업</span>
+											<span class="phone">010-1234-5678</span>
+										</div>
+
 										<div class="txt_reply">
 											<pre>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은 우리 기상일세 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람서리 불변함은 우리 기상일세</pre>
 										</div>
@@ -385,6 +392,13 @@
 												<option>사용자가 삭제</option>
 											</select>
 										</div>
+										<!-- 작성자정보추가 -->
+										<div class="wrap_info">
+											<span class="name">홍길동</span>
+											<span class="num">28000000</span>
+											<span class="company">태광산업</span>
+											<span class="phone">010-1234-5678</span>
+										</div>
 										<div class="txt_reply">
 											동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
 											우리 기상일세
@@ -421,6 +435,13 @@
 												<option>사용자가 삭제</option>
 											</select>
 										</div>
+										<!-- 작성자정보추가 -->
+										<div class="wrap_info">
+											<span class="name">홍길동</span>
+											<span class="num">28000000</span>
+											<span class="company">태광산업</span>
+											<span class="phone">010-1234-5678</span>
+										</div>
 										<div class="txt_reply">
 											동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
 											우리 기상일세
@@ -439,6 +460,13 @@
 												<option>사용자가 삭제</option>
 											</select>
 										</div>
+										<!-- 작성자정보추가 -->
+										<div class="wrap_info">
+											<span class="name">홍길동</span>
+											<span class="num">28000000</span>
+											<span class="company">태광산업</span>
+											<span class="phone">010-1234-5678</span>
+										</div>
 										<div class="txt_reply">
 											동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
 											우리 기상일세
@@ -456,6 +484,13 @@
 												<option>블라인드 처리</option>
 												<option>사용자가 삭제</option>
 											</select>
+										</div>
+										<!-- 작성자정보추가 -->
+										<div class="wrap_info">
+											<span class="name">홍길동</span>
+											<span class="num">28000000</span>
+											<span class="company">태광산업</span>
+											<span class="phone">010-1234-5678</span>
 										</div>
 										<div class="txt_reply">
 											동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화삼천리 화려강산 대한사람 대한으로 길이 보전하세 남산위에 저 소나무 철갑을 두른듯 바람 서리 불변함은
